# Deep-Learning

./: .gitignore  LICENSE  README.md  project_spec.md  project_structure.txt  pyproject.toml
data/: .Rhistory  b.csv  madelon.csv
outputs/: best_trial_lr0.0001_bs32_do0.3_sgd.keras  best_trial_lr0.0001_bs64_do0.3_adam.keras  best_trial_lr0.0005_bs32_do0.3_sgd.keras  best_trial_lr0.0005_bs32_do0.4_adam.keras  best_trial_lr0.0005_bs32_do0.4_sgd.keras  best_trial_lr0.0005_bs32_do0.5_adam.keras  best_trial_lr0.0005_bs64_do0.3_adam.keras  best_trial_lr0.0005_bs64_do0.3_sgd.keras  best_trial_lr0.0005_bs64_do0.4_adam.keras  best_trial_lr0.001_bs64_do0.4_adam.keras  best_trial_lr0.001_bs64_do0.4_sgd.keras  best_trial_lr0.001_bs64_do0.5_sgd.keras  final_best.keras  final_extended.keras
src/: agent.py  llm.py  logging_utils.py  main.py  utils.py
src/ch03_regression/: practice1.ipynb  practice2.ipynb  practice3.ipynb
src/ch04_classification/: ch04. random_forest.py
src/ch04_svm_cross_val_score/: ch04_svm_cross_val_score.py  ch04_svm_kfold.py
src/ch05_FS_stackingr/: ch05. feature_selection.py  ch05_bagging_meta_classifier.py  ch05_model_stacking.py  ch05_voting_classifier.py
src/ch07/: example2.py  practice1.py
src/ch09/: TrainPlot.py  ch09.assignment.py  ch09.dnn_basic_iris.ipynb  ch09.dnn_basic_iris.py  ch09.dnn_mnist.py
src/ch10/: ch10_image_processing.py  chap10_CNN_MNIST_augmentation_example.py  chap10__augmentation_example.py  chap10_cnn_mnist_load_images.py
src/ch11/: chap11_DenseNet.py  chap11_MobileNetV3_cifar.py
src/ch12/: ch12_LSTM.py  ch12_simpleRNN.py  ch12_text_classification.py  ch12_word_represent.py  practice2.py  practice2hard.py
src/ch13/: ch13_bart_example.py
src/ch14/: ch14_chat_SmolLM_test.py  ch14_efficientNet_example.py  ch14_transformers.py  chatbot_app.py  llm.py
src/ch15/: ch15.prompt_template_basic-1.py  ch15.prompt_template_chat-1.py  ch15.prompt_template_multi-1.py  (+1 more)
(+7 files in other folders)
