[project]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "ParkSeonghyeon2003",email = "shpark8267@gmail.com"}
]
readme = "README.md"
requires-python = "=3.13.7"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "keras (>=3.12.0,<4.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "deep_learning", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
